--- a/package.json
+++ b/package.json
@@ -57,5 +57,9 @@
     "babel-preset-env": "^1.7.0",
     "nightwatch": "^1.3.5",
     "nodemon": "^2.0.3"
+  },
+  "engines": {
+    "node": ">=14",
+    "npm": ">=7"
   }
 }
